# Hearthlink

./: .claude-context.md  .env  .env.development  .env.example  .env.local  .env.pgvector  .env.production  .gitignore  .mcp.json  ALDEN_LAUNCHER_GUIDE.md  ALDEN_LAUNCH_READY.md  ALPHA_TEST_PLAN.md  BEHAVIORAL_ANALYSIS_VARIANCE_REPORT.md  BUILD_SYSTEM_GUIDE.md  CLAUDE.md  CORE_TESTING_IMPLEMENTATION_SUMMARY.md  CreateTaskbarShortcut.vbs  DEPLOYMENT_READY.md  DESKTOP_BUILD_README.md  DEVELOPMENT_ACCOUNTABILITY_PROTOCOL.md  DEVELOPMENT_SCRIPTS_README.md  DiagnoseWSL.bat  ENTERPRISE_IMPLEMENTATION_SUMMARY.md  ENV_CONSOLIDATION.md  FEEDBACK_COLLECTION_SYSTEM_SUMMARY.md  FUNCTION_ENACTMENT_MAP.md  HEARTHLINK_KNOWLEDGE_GRAPH.md  HEARTHLINK_PROJECT_REMEDIATION_PLAN.md  HEARTHLINK_SYSTEM_KNOWLEDGE_GRAPH.md  HUMAN_VERIFICATION_GUIDE.md  Hearthlink-GitHub  Hearthlink-GitHub.pub  HearthlinkCrossPlatform.js  HearthlinkDirect.bat  HearthlinkDirect2.bat  HearthlinkFix.bat  HearthlinkLauncher.bat  HearthlinkQuickFix.bat  HearthlinkService.bat  HearthlinkSilent.vbs  (+161 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json  postCreate.sh  validate_api_services.py  validate_setup.py
.failsafe/: cursorrules.json  session-20250707-002610.json  session-20250707-011050.json  session-20250707-181357.json  session-20250710-210628.json  session-20250711-021604.json  session-20250711-024731.json  sprint-templates.json
.github/: branch-protection-config.json
Archive/: AI_COLLABORATION_LOG.md  ARCHITECTURAL_ANALYSIS_AND_DECISIONS.md  CLAUDE_GOOGLE_DELEGATION_COMPLETE.md  CORE_TESTING_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DESKTOP_BUILD_README.md  DEVELOPMENT_SCRIPTS_README.md  ENHANCED_SYNAPSE_IMPLEMENTATION_SUMMARY.md  GEMINI_CONNECTOR_STATUS_REPORT.md  GOOGLE_API_INTEGRATION_COMPLETE.md  HEARTHLINK_FIXES.md  IMPLEMENTATION_UNCERTAINTIES.md  INTEGRATION_SUCCESS_REPORT.md  IPC_INTEGRATION_README.md  LAUNCHER_VALIDATION_REPORT.md  LAUNCH_PAGE_DOCUMENTATION.md  LAUNCH_TROUBLESHOOTING.md  LOADING_ICON_FIX.md  PHASE_4_VALIDATION_REPORT.md  PLATINUM_BLOCKERS.md  PROJECT_PLAN.md  PROJECT_STATUS_REPORT.md  QUICK_FIX_GUIDE.md  RELEASE_SUMMARY.md  SOLUTION.md  SPRINT_COMPLETION_LOG.md  SPRINT_UI_CORRECTIONS_PLAN.md  SYNAPSE_IMPLEMENTATION_SUMMARY.md  SYNAPSE_LAUNCH_IMPLEMENTATION_REPORT.md  SYSTEM_DEMO.md  TEST_RESULTS.md  TOKEN_TRACKING_IMPLEMENTATION_REPORT.md  UI_ALIGNMENT_AUDIT.md  UI_IMPLEMENTATION_CHECKLIST.md  UI_TEST_COMPLIANCE_SUMMARY.md  VAULT_REVIEW_REPORT.md  VAULT_TEST_PLAN.md  VAULT_TOKEN_RESTRICTIONS_REPORT.md  VAULT_WRITE_INTERCEPTION_SECURITY_ANALYSIS.md  VOICE_ROUTING_COMPLIANCE_SUMMARY.md  (+2 more)
ArchiveCode/: =0.104.0  =0.24.0  =1.0.0  =2.31.0  =23.0.0  AldenInterface_Original.js  alden_backend_real.py  (+62 more)
src-tauri/: BUILD_TRIGGER.md  Cargo.toml  Cargo.toml.backup  tauri.conf.json  wrapper.html
src-tauri/assets/: ci_badges.json  installer_manifest.json  validation.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs  vault_rotation.rs
(+1827 files in other folders)
